# SMARTWAREProAI

./: .env.example  .gitignore  FIXES_APPLIED.txt  README.md  ReadMe.md  app.py  backup_database.bat  check_database.py  cleanup_test_data.py  database.py  install.bat  models.py  pyproject.toml  requirements.txt  reset_sections.py  setup_email.bat  utils.py
static/: style.css
static/js/: main.js  qr-scanner.js  warehouse-map.js
templates/: add_product.html  base.html  index.html  login.html  notifications.html  owner_add_user.html  owner_dashboard.html  owner_edit_user.html  product_detail.html  receive_stock.html  remove_stock.html  scan.html  sections.html  vendors.html  warehouse_config.html  warehouse_map.html
