[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "gunicorn>=21.2.0",
    "numpy>=1.26.2",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.10",
    "qrcode>=7.4.2",
    "reportlab>=4.4.2",
    "sqlalchemy>=2.0.23",
    "werkzeug>=3.0.1",
]

[tool.setuptools]
packages = []
py-modules = ["app"]
